public/stylesheets/style.css
html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}

:root {
  --rad: .7rem;
  --dur: .3s;
  --color-dark: #2f2f2f;
  --color-white: #fff;
  --color-step-one: #d4fbc4;
  --color-step-two:#d8f1c4;
  --color-step-three:#e1dec1;
  --color-step-four:#e6d2c0;
  --color-step-five:#ecc5bf;
  --fontsize-header: 2em;
  --fontsize-sub: 1.3em;
  --font-family: "Poppins", "helvetica", sans-serif;
  --font-regular: 400;
  --font-medium: 500;
  --font-semi: 600;
  --font-bold: 800;
  --font-black: 900;
}

/* ^ global stuff ^ */

body {
  font-family: var(--font-family);
  margin: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}
a {
  color: var(--color-dark);
  text-decoration: none;
}

.container {
  width: 100%;
  height: 100vh;
  font: var(--font-fam);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}
.content {
  margin-top: 90px;
  width: 65%;
  height: 100vh;
  font-family: var(--font-family);
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  justify-items: left;
}
.content-wrap {
  padding-left: 30%;
  display: flex;
  flex-direction: column;
  justify-content: left;
}
.content h2 {
  color: var(--color-dark);
  font-size: var(--fontsize-header);
  font-weight: var(--font-black);
}
.content h3 {
  color: var(--color-dark);
  font-size: var(--fontsize-sub);
  font-weight: var(--font-bold);
}
.content p {
  width: 66%;
  margin-top: 150px;
}
.content footer {
  width: 65%;
  height: 60px;
  padding-left: 30%;
  font-size:3em;
  display: flex;
  align-content: center;
}
.fa-chevron-down {
  margin-top: 15%;
  animation: bounce 1.5s infinite;
}
@keyframes bounce {
  0%, 100% {-webkit-transform: translateY(0);}
  50% {-webkit-transform: translateY(-25px);}
}

.content-side {
  width: 35%;
  height: 100vh;
  padding-top: 90px;
  font-family: var(--font-family);
  background-color: var(--color-dark);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.content-side nav {
  height: 80px;
  position: fixed;
  top: 0;
  z-index: 10;  
  padding-left: 5%;
  padding-right: 5%;
  display: flex;
  flex-direction: row;
  align-items: flex-end;
}
.content-side nav i {
  color: var(--color-white);
  font-size: 2.5em;
}

.graph-container {
  width:  100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.graph {
  height: 66%;
  width: 66%;
  margin-bottom: 30px;

}
.input-fields {
  width: 500px;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-left: 10px;
  padding-right: 10px;
  color: black;
  font-size: var(--fontsize-header);
  border: 3px solid lightgray;
  border-radius: 0 5px 5px 0;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

